Tests/CompilerTests/negative/missing-type-identifier.hylo
//! no-std

trait A { type }
