Tests/CompilerTests/negative/missing-type-identifier.expected
negative/missing-type-identifier.hylo:1.15: error: expected identifier
trait A { type }
              ^
